# sh-buggy-api

./: Brewfile  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
app/: main.py
app/api/: ocr.py  user.py
